@@ -82,6 +82,8 @@ struct  stat statbuf;                   /* File information          */
 int     startblk;                       /* Device origin block number*/
 int     numblks;                        /* Device block count        */
 BYTE    c;                              /* Character work area       */
+char   *cu = NULL;                      /* Specified control unit    */
+char   *kw;                             /* Argument keyword          */
 int     cfba = 0;                       /* 1 = Compressed fba        */
 int     i;                              /* Loop index                */
 CKDDASD_DEVHDR  devhdr;                 /* Device header             */
@@ -188,19 +190,27 @@ char    pathname[MAX_PATH];             /* file path in host format  */
             if (strlen (argv[i]) > 3
              && memcmp ("sf=", argv[i], 3) == 0)
             {
-                if (strlen(argv[i]+3) < 256)
-                    dev->dasdsfn=strdup (argv[i]+3);
-                    if (dev->dasdsfn)
-                    {
+                if ('\"' == argv[i][3]) argv[i]++;
+                hostpath(pathname, argv[i]+3, sizeof(pathname));
+                dev->dasdsfn = strdup(pathname);
+                if (dev->dasdsfn)
+                {
                     /* Set the pointer to the suffix character */
-                        dev->dasdsfx = strrchr (dev->dasdsfn, '/');
-                        if (dev->dasdsfx == NULL)
-                            dev->dasdsfx = dev->dasdsfn + 1;
-                        dev->dasdsfx = strchr (dev->dasdsfx, '.');
-                        if (dev->dasdsfx == NULL)
-                            dev->dasdsfx = dev->dasdsfn + strlen(dev->dasdsfn);
-                        dev->dasdsfx--;
-                    }
+                    dev->dasdsfx = strrchr (dev->dasdsfn, '/');
+                    if (dev->dasdsfx == NULL)
+                        dev->dasdsfx = dev->dasdsfn + 1;
+                    dev->dasdsfx = strchr (dev->dasdsfx, '.');
+                    if (dev->dasdsfx == NULL)
+                        dev->dasdsfx = dev->dasdsfn + strlen(dev->dasdsfn);
+                    dev->dasdsfx--;
+                }
+                continue;
+            }        
+            if (strlen (argv[i]) > 3
+             && memcmp("cu=", argv[i], 3) == 0)   /* support for cu= added but  */
+            {                                     /* is ignored for the present */   
+                kw = strtok (argv[i], "=");
+                cu = strtok (NULL, " \t");
                 continue;
             }
             if (strcasecmp ("nosyncio", argv[i]) == 0
